# LLM-RAG-docs

./: .env.example  .gitignore  README.md  main.py  populate_db.py  pyproject.toml
app/: chroma.py  get_embedding.py  populate_db.py  query_rag.py
utils/: db.py  logger.py
